--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"d3": "^7.9.0",
-		"luxon": "^3.4.4"
+		"luxon": "^3.4.4",
+		"sass": "^1.77.8"
 	}
 }
