--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"dependencies": {
 		"@aws-sdk/client-cloudwatch": "^3.613.0",
 		"@aws-sdk/client-dynamodb": "^3.614.0",
+		"@floating-ui/dom": "^1.6.7",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"d3": "^7.9.0",
