--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
+		"prettier-plugin-organize-imports": "^4.0.0",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -36,10 +37,12 @@
 	"dependencies": {
 		"@aws-sdk/client-cloudwatch": "^3.613.0",
 		"@aws-sdk/client-dynamodb": "^3.614.0",
+		"@floating-ui/core": "^1.6.4",
 		"@floating-ui/dom": "^1.6.7",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"d3": "^7.9.0",
-		"luxon": "^3.4.4"
+		"luxon": "^3.4.4",
+		"svelte-floating-ui": "^1.5.9"
 	}
 }
