--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-  "name": "frontend",
-  "version": "0.0.1",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev --open",
-    "build": "svelte-kit sync && vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.3"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^4",
-    "@sveltejs/adapter-static": "^3.0.4",
-    "@sveltejs/adapter-vercel": "^5.4.1",
-    "@sveltejs/kit": "^2",
-    "@sveltejs/vite-plugin-svelte": "^5",
-    "@types/d3": "^7.4.3",
-    "@types/eslint": "^9",
-    "@types/luxon": "^3.4.2",
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-prettier": "^10",
-    "eslint-plugin-svelte": "^2.42.0",
-    "globals": "^15.8.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "prettier-plugin-svelte": "^3.2.5",
-    "svelte": "^5",
-    "svelte-check": "^4",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0-alpha.20",
-    "vite": "^6"
-  },
-  "type": "module",
-  "dependencies": {
-    "@aws-sdk/client-cloudwatch": "^3",
-    "@aws-sdk/client-dynamodb": "^3",
-    "d3": "^7.9.0",
-    "luxon": "^3.4.4",
-    "svelte-floating-ui": "^1.5.9"
+    "eslint-config-next": "15.3.3",
+    "@eslint/eslintrc": "^3"
   }
 }
