--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heatherwilde.buzz",
+  "name": "heatherwilde.net",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.10",
+    "@tanstack/react-query": "^5.80.6",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "temporal-polyfill": "^0.3.0"
   },
   "imports": {
     "#*": "./src/*"
