--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,20 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noPropertyAccessFromIndexSignature": false,
+    "noUncheckedSideEffectImports": true,
+
     "plugins": [
       {
         "name": "next"
       }
     ],
-    "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": true
   },
   "include": [
     "next-env.d.ts",
