--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-db-types": "supabase gen types typescript --project-id gsmzdmodeuprbsorflhh"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.80.6",
+    "@uidotdev/usehooks": "^2.4.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "supabase": "^2.24.3",
     "temporal-polyfill": "^0.3.0"
   },
   "imports": {
